discussion/kv_engine/184426/184426_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54866: Inject non-elided task and bucket names on the call stack

Adds a new utility class called DebugVariable which uses folly's
compiler_must_not_elide to allow values to be kept around on the stack,
and uses that to put the name of the taskable and the name of the
task that is being run on the program stack, so that they are available
in crash dumps.

Change-Id: Ie2298ea18df493ffe2ad07b4c6ba7a0eab1017e6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2023-01-03 10:51:02.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-03 11:20:29.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21902/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/utilities/debug_variable.h b/utilities/debug_variable.h
index c5006c988..bf1f4c7d2 100644
--- a/utilities/debug_variable.h
+++ b/utilities/debug_variable.h
@@ -81,7 +81,7 @@ public:
     /**
      * Construct a DebugVariable given a key and a value.
      */
-    constexpr DebugVariable(std::string_view k, T&amp;&amp; v)
+    constexpr DebugVariable(std::string_view k, T &amp;&amp; v)
         : key({}), value(std::move(v)) {
         static_assert(!std::is_pointer_v&lt;T&gt; &amp;&amp; !std::is_same_v&lt;void*, T&gt; &amp;&amp;
                               !std::is_same_v&lt;const void*, T&gt;,
@@ -110,12 +110,12 @@ public:
     /**
      * Construct a DebugVariable given a key and a value.
      */
-    constexpr DebugVariable(const char (&amp;k)[KeySize], T&amp;&amp; v)
+    constexpr DebugVariable(const char(&amp;k)[KeySize], T&amp;&amp; v)
         : DebugVariable(std::string_view(k), std::move(v)) {
     }
 
     DebugVariable(const DebugVariable&amp;) = delete;
-    DebugVariable(DebugVariable&amp;&amp;) = delete;
+    DebugVariable(DebugVariable &amp;&amp;) = delete;
 
     DebugVariable&amp; operator=(const DebugVariable&amp;) = delete;
     DebugVariable&amp; operator=(DebugVariable&amp;&amp;) = delete;

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21902/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22286/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/dbgvar/dbgvar_test.cc:56:5: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
    StackCapture() {
    ^              ~
                   = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/debug_variable.h:93:24: error: no member named "invalid_argument" in namespace "std" [clang-diagnostic-error]
            throw std::invalid_argument("Key is empty!");
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/debug_variable.h:96:24: error: no member named "invalid_argument" in namespace "std" [clang-diagnostic-error]
            throw std::invalid_argument("Key too long!");
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/debug_variable.h:113:35: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    constexpr DebugVariable(const char (&k)[KeySize], T&& v)
                                  ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22286/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/debug_variable.h:93:24:
error: no member named "invalid_argument" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22286/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51606/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51606/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1044/ : FAILURE

Compile error at [2023-01-03T10:52:44.096Z] ../kv_engine/tests/dbgvar/dbgvar_test.cc:132:62:
error: missing braces around initializer for ?std::__array_traits<char, 1>::_Type? {aka ?char [1]?} [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1044/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23855/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23855/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24329/ : FAILURE

Compile error at [2023-01-03T10:59:11.554Z] ../kv_engine/tests/dbgvar/dbgvar_test.cc:132:62:
error: missing braces around initializer for ?std::__array_traits<char, 1>::_Type? {aka ?char [1]?} [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24329/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25610/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25610/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24751/ : FAILURE

Compile error at [2023-01-03T10:59:13.736Z] ../kv_engine/tests/dbgvar/dbgvar_test.cc:132:62:
error: missing braces around initializer for ?std::__array_traits<char, 1>::_Type? {aka ?char [1]?} [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24751/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32747/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32747/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12093/ : FAILURE

Compile error at [2023-01-03T11:06:32.863Z] ../kv_engine/tests/dbgvar/dbgvar_test.cc:132:62:
error: missing braces around initializer for ?std::__array_traits<char, 1>::_Type? {aka ?char [1]?} [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12093/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43323/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12004/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
